--- a/resources/sass/abstracts/_colors.scss
+++ b/resources/sass/abstracts/_colors.scss
@@ -1,1 +1,28 @@
-$clr-priamry-400: hsl(202,100,50);
+$colors: (
+    'primary': (
+        '200': hsl(202, 100%, 80%),
+        '300': hsl(202, 100%, 70%),
+        '500': hsl(202, 100%, 50%),
+        '600': hsl(202, 100%, 40%)
+    ),
+
+    'neutral': (
+        '100': hsl(0, 0%, 99%),
+        '200': hsl(216, 20%, 95%),
+        '500': hsl(216, 20%, 30%),
+        '800': hsl(216, 20%, 20%),
+        '900': hsl(216, 19%, 15%)
+    ),
+
+    'other': (
+        'active': hsl(123, 85%, 50%)
+    )
+);
+
+:root {
+    @each $color, $shades in $colors {
+        @each $shade, $value in $shades {
+            --clr-#{$color}-#{$shade}: #{$value};
+        }
+    }
+}
