Basic html and setting up icons and styles for header.

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,5 +1,8 @@
 @use '../sass/abstracts/colors';
+@use '../sass/abstracts/size';
 
-@use '../sass/base/reset';
+@use '../sass/components/header';
+@use '../sass/components/profilePicture';
+
 @use '../sass/base/typography';
-
+@use '../sass/base/reset';
