--- a/resources/sass/abstracts/_size.scss
+++ b/resources/sass/abstracts/_size.scss
@@ -14,6 +14,7 @@ $sizes: (
     '500':$base-size * 1,
     '600':$base-size * 1.5,
     '700':$base-size * 1.75,
+    '750':$base-size * 2,
     '800':$base-size * 2.5,
     '900':$base-size * 4
 );
