--- a/resources/sass/components/_line.scss
+++ b/resources/sass/components/_line.scss
@@ -1,4 +1,4 @@
 .line {
     height: var(--size-100);
-    background-color: var(--clr-neutral-);
+    background-color: var(--clr-neutral-300);
 }   
