--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Inter";
+    src: url('/resources/assets/Inter-VariableFont_slnt\,wght.woff2') format('woff2-variations');
+}
+
 $ff-primary: 'Inter';
 
 $base-size: 1rem;
