--- a/resources/sass/abstracts/_colors.scss
+++ b/resources/sass/abstracts/_colors.scss
@@ -9,7 +9,9 @@ $colors: (
     'neutral': (
         '100': hsl(0, 0%, 99%),
         '200': hsl(216, 20%, 95%),
+        '250': hsl(216, 20%, 90%),
         '300': hsl(216, 20%, 85%),
+        '400': hsl(216, 20%, 50%),
         '500': hsl(216, 20%, 30%),
         '800': hsl(216, 20%, 20%),
         '900': hsl(216, 19%, 15%)
