--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -22,10 +22,10 @@
 .menu {
     position: absolute;
     right: 0;
-    
-    background: var(--clr-neutral-100) ;
 
-    margin-block: var(--size-400);
+    background: var(--clr-neutral-100);
+
+    margin-block: var(--size-600);
     padding: var(--size-500);
 
     border-radius: var(--size-500);
@@ -34,56 +34,49 @@
 
 }
 
-.line {
-    width: 100%;
-    height: var(--size-100);
-    
-    background: var(--clr-neutral-300);
+.icon {
+    width: var(--size-700);
+    aspect-ratio: 1 / 1;
 
-    border-radius: 100vh;
+    fill: none;
 
+    --icon-color: var(--clr-neutral-900);
 }
 
-.profile-settings {
-    max-width: 300px;
-
-    display: flex;
-    flex-direction: column;
-    gap: var(--size-500);
-
-    .menu-item {
-        width: 100%;
-        gap: var(--size-500);
-        padding: var(--size-300) var(--size-500);
-
-        color: var(--clr-neutral-900);
-        font-weight: var(--fw-semibold);
-
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        text-decoration: none;
-
-        border-radius: var(--size-500);
-
-        &:hover, &:focus {
-            background: var(--clr-neutral-200);
-        }
-
-    }
-}
+//Notifications
 
 .notifications-heading {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    button {
-        background: red;
-        border: none;
+    div {
 
         display: flex;
+        flex-direction: row;
+        gap: var(--size-100);
+
+        align-items: center;
+
+        button {
+            background: none;
+            border: none;
+
+            width: auto;
+            aspect-ratio: 1 / 1;
+
+            border-radius: 50%;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &:hover,
+            &:focus {
+
+                background: var(--clr-neutral-200);
+            }
+        }
     }
 }
 
@@ -112,6 +105,61 @@
 
     }
 
+}
+
+.no-notifications {
+
+    margin-block: var(--size-500);
+
+    width: 100%;
+    gap: var(--size-500);
+
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+
+    .icon {
+
+        --icon-color: var(--clr-neutral-500);
+
+        width: var(--size-800);
+    }
+
+}
+
+// Profile Dropdown
+
+.profile-settings {
+    max-width: 300px;
+
+    display: flex;
+    flex-direction: column;
+    gap: var(--size-500);
+
+    .menu-item {
+        width: 100%;
+        gap: var(--size-500);
+        padding: var(--size-300) var(--size-500);
+
+        color: var(--clr-neutral-900);
+        font-weight: var(--fw-semibold);
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        text-decoration: none;
+
+        border-radius: var(--size-500);
+
+        &:hover,
+        &:focus {
+            background: var(--clr-neutral-200);
+        }
+
+    }
 }
 
 .profile {
@@ -160,11 +208,64 @@
 
 }
 
-.icon {
-    width: var(--size-700);
-    aspect-ratio: 1 / 1;
+.line {
+    width: 100%;
+    height: var(--size-100);
 
-    fill: none;
+    background: var(--clr-neutral-300);
 
-    --icon-color: var(--clr-neutral-900);
+    border-radius: 100vh;
+
+}
+
+//Searchbar
+
+.search {
+    width: min(50%, 40rem);
+}
+
+.searchbar {
+    background: var(--clr-neutral-200);
+    
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+
+    padding: var(--size-200) var(--size-500);
+    border-radius: 100vh;
+    gap: var(--size-300);
+
+    .search-input {
+        border: none;
+        background: inherit;
+
+        width: 100%;
+        
+        font-size: var(--fs-500);
+        font-weight: var(--fw-regular);
+        color: var(--clr-neutral-700);
+
+        &:focus {
+            outline: none;
+        }
+
+        &::placeholder {
+            font-weight: var(--fw-semibold);
+            font-size: var(--fs-500);
+
+            color: var(--clr-neutral-400);
+        }
+
+        &::-webkit-search-cancel-button, &::-webkit-search-decoration {
+            -webkit-appearance: none;
+            appearance: none;
+        }
+    }
+
+    .icon {
+        width: var(--size-600);
+        aspect-ratio: 1 / 1;
+        --icon-color: var(--clr-neutral-400);
+    }
 }
