Recent searches display added.

--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -19,21 +19,6 @@
     gap: var(--size-300);
 }
 
-.menu {
-    position: absolute;
-    right: 0;
-
-    background: var(--clr-neutral-100);
-
-    margin-block: var(--size-600);
-    padding: var(--size-500);
-
-    border-radius: var(--size-500);
-
-    width: 300px;
-
-}
-
 .icon {
     width: var(--size-700);
     aspect-ratio: 1 / 1;
@@ -44,6 +29,14 @@
 }
 
 //Notifications
+
+.notifications {
+    padding: var(--size-500);
+    --menu-width: 300px;
+
+    background: var(--clr-neutral-100);
+    border-radius: var(--size-500);
+}
 
 .notifications-heading {
     display: flex;
@@ -80,7 +73,7 @@
     }
 }
 
-.notifications-btn {
+.notifications-btn, .search-btn {
 
     display: flex;
     justify-content: center;
@@ -132,7 +125,12 @@
 // Profile Dropdown
 
 .profile-settings {
-    max-width: 300px;
+
+    background: var(--clr-neutral-100);
+    border-radius: var(--size-500);
+
+    --menu-width: 300px;
+    padding: var(--size-500);
 
     display: flex;
     flex-direction: column;
@@ -221,6 +219,9 @@
 //Searchbar
 
 .search {
+    position: relative;
+
+    --menu-width: 100%;
     width: min(50%, 40rem);
 }
 
@@ -268,4 +269,16 @@
         aspect-ratio: 1 / 1;
         --icon-color: var(--clr-neutral-400);
     }
+}
+
+.recent-search {
+    display: flex;
+    flex-direction: column;
+
+    background: var(--clr-neutral-100);
+
+    padding: var(--size-500);
+    border-radius: var(--size-500);
+    gap: var(--size-500);
+    
 }
