--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -6,6 +6,8 @@
 
 @use '../sass/pages/home';
 
+@use '../sass/layouts/menu';
+
 @use '../sass/components/header';
 @use '../sass/components/line';
 @use '../sass/components/profilePicture';
