--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,14 +1,17 @@
 @use '../sass/base/typography';
 @use '../sass/base/reset';
 
-@use '../sass/abstracts/colors';
-@use '../sass/abstracts/size';
-
-@use '../sass/pages/home';
+@use '../sass/layouts/menu';
+@use '../sass/layouts/flex';
+@use '../sass/layouts/columns';
 
 @use '../sass/components/header';
 @use '../sass/components/line';
 @use '../sass/components/profilePicture';
 
-@use '../sass/layouts/menu';
-@use '../sass/layouts/breakpoints';
+@use '../sass/pages/home';
+
+
+@use '../sass/abstracts/colors';
+@use '../sass/abstracts/breakpoints';
+@use '../sass/abstracts/size';
