--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -17,7 +17,6 @@
 
     padding-inline: var(--size-500);
     border-radius: var(--size-500);
-    
 }
 
 //logo
@@ -71,6 +70,10 @@
 
     background: var(--clr-neutral-100);
     border-radius: var(--size-500);
+
+    -webkit-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
+    -moz-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
+    box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
 }
 
 .notifications-heading {
@@ -178,6 +181,10 @@
     flex-direction: column;
     gap: var(--size-500);
 
+    -webkit-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
+    -moz-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
+    box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
+
     .menu-item {
         width: 100%;
         gap: var(--size-500);
@@ -271,7 +278,7 @@
     width: auto;
     margin-block: var(--size-300);
 
-    @media screen and (min-width: 30em){
+    @media screen and (min-width: 30em) {
         position: relative;
     }
 }
@@ -420,4 +427,7 @@
     border-radius: var(--size-500);
     gap: var(--size-500);
 
+    -webkit-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
+    -moz-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
+    box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
 }
