--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -7,7 +7,10 @@
 
 @use '../sass/layouts/menu';
 @use '../sass/layouts/flex';
+@use '../sass/layouts/content';
 
+@use '../sass/components/groupsPanel';
+@use '../sass/components/sideNav';
 @use '../sass/components/header';
 @use '../sass/components/line';
 @use '../sass/components/profilePicture';
