--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -2,3 +2,13 @@ body {
     background-color: var(--clr-neutral-200);
     margin: var(--size-400);
 }
+
+.left-panel {
+    
+    display: flex;
+    flex-direction: column;
+
+    margin-block: var(--size-500);
+    gap: var(--size-500);
+
+}
