--- a/resources/sass/components/_groupsPanel.scss
+++ b/resources/sass/components/_groupsPanel.scss
@@ -1,5 +1,10 @@
 .groups-panel {
 
+    display: flex;
+    flex-direction: column;
+    
+    gap: var(--size-500);
+
     background: var(--clr-neutral-100);
 
     border-radius: var(--size-500);
@@ -8,6 +13,27 @@
     .groups-list {
 
         .group {
+
+            display: flex;
+            align-items: center;
+    
+            gap: var(--size-500);
+    
+            border-radius: var(--size-500);
+    
+            text-decoration: none;
+
+            .group-name {
+
+                color: var(--clr-neutral-500);
+
+            }
+
+            transition: 0.2s;
+
+            &:hover, &:focus-within {
+                background: var(--clr-neutral-200);
+            }
 
         }
 
