--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -10,6 +10,7 @@
 @use '../sass/layouts/content';
 
 @use '../sass/components/groupsPanel';
+@use '../sass/components/friendsPanel';
 @use '../sass/components/sideNav';
 @use '../sass/components/header';
 @use '../sass/components/line';
