--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -3,7 +3,7 @@ body {
     margin: var(--size-400);
 }
 
-.left-panel {
+.left-panel, .right-panel {
     
     display: flex;
     flex-direction: column;
