--- a/resources/sass/layouts/_content.scss
+++ b/resources/sass/layouts/_content.scss
@@ -1,5 +1,5 @@
 .content {
     display: grid;
 
-    grid-template-columns: min(18.75rem, 30%) clamp(15rem, 60%, 38rem) auto;
+    grid-template-columns: min(18.75rem, 30%) auto min(18.75rem, 30%);
 }
