Box shadow to elements

--- a/resources/sass/abstracts/_colors.scss
+++ b/resources/sass/abstracts/_colors.scss
@@ -18,6 +18,7 @@ $colors: (
     ),
 
     'other': (
+        'box-shadow': hsla(216, 20%, 15%, 0.15),
         'active': hsl(123, 85%, 50%)
     )
 );
