--- a/resources/sass/components/_friendsPanel.scss
+++ b/resources/sass/components/_friendsPanel.scss
@@ -10,6 +10,10 @@
     border-radius: var(--size-500);
     padding: var(--size-500);
 
+    -webkit-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+
     .friends-list {
 
         .friend {
