--- a/resources/sass/components/_groupsPanel.scss
+++ b/resources/sass/components/_groupsPanel.scss
@@ -10,6 +10,26 @@
     border-radius: var(--size-500);
     padding: var(--size-500);
 
+    -webkit-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+
+    @media only screen and (max-width: 80em) {
+        
+        width: fit-content;
+
+        padding: var(--size-400);
+
+    }
+
+    .panel-heading {
+
+        @media only screen and (max-width: 80em) {
+            display: none;
+        }
+
+    }
+
     .groups-list {
 
         .group {
@@ -26,6 +46,10 @@
             .group-name {
 
                 color: var(--clr-neutral-500);
+
+                @media only screen and (max-width: 80em) {
+                    display: none;
+                }
 
             }
 
