--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -17,6 +17,10 @@
 
     padding-inline: var(--size-500);
     border-radius: var(--size-500);
+
+    -webkit-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
 }
 
 //logo
@@ -71,9 +75,9 @@
     background: var(--clr-neutral-100);
     border-radius: var(--size-500);
 
-    -webkit-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
-    -moz-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
-    box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
+    -webkit-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
 }
 
 .notifications-heading {
@@ -181,9 +185,9 @@
     flex-direction: column;
     gap: var(--size-500);
 
-    -webkit-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
-    -moz-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
-    box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
+    -webkit-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
 
     .menu-item {
         width: 100%;
@@ -427,7 +431,7 @@
     border-radius: var(--size-500);
     gap: var(--size-500);
 
-    -webkit-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
-    -moz-box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
-    box-shadow: 0px 8px 17px -5px rgba(61, 73, 92, 0.61);
+    -webkit-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
 }
