--- a/resources/sass/components/_sideNav.scss
+++ b/resources/sass/components/_sideNav.scss
@@ -3,8 +3,18 @@
     background: var(--clr-neutral-100);
 
     border-radius: var(--size-500);
-    
+
     padding: var(--size-500);
+
+    -webkit-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+    box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+
+    @media only screen and (max-width: 80em) {
+        width: fit-content;
+        padding: var(--size-300);
+
+    }
 
     .nav {
 
@@ -27,8 +37,17 @@
 
         text-decoration: none;
 
+        @media only screen and (max-width: 80em) {
+            width: fit-content;
+            padding: var(--size-200);
+        }
+
         .nav-item-header {
             color: var(--clr-neutral-500);
+
+            @media only screen and (max-width: 80em) {
+                display: none;
+            }
         }
 
         .icon {
@@ -41,7 +60,7 @@
         }
 
         &.active {
-            
+
             background: var(--clr-primary-500);
 
             .icon {
@@ -52,7 +71,8 @@
                 color: var(--clr-neutral-100);
             }
 
-            &:hover, &:focus-within {
+            &:hover,
+            &:focus-within {
                 background: var(--clr-primary-500);
             }
 
@@ -60,7 +80,8 @@
 
         transition: 0.2s;
 
-        &:hover, &:focus-within {
+        &:hover,
+        &:focus-within {
             scale: 1.05;
             background: var(--clr-neutral-200);
         }
