Responsiveness and mobile nav

--- a/resources/sass/abstracts/_size.scss
+++ b/resources/sass/abstracts/_size.scss
@@ -9,6 +9,7 @@ $sizes: (
     '600':$base-size * 1.5,
     '700':$base-size * 1.75,
     '750':$base-size * 2,
+    '775':$base-size * 2.25,
     '800':$base-size * 2.5,
     '900':$base-size * 4
 );
