--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -12,6 +12,7 @@
 @use '../sass/components/groupsPanel';
 @use '../sass/components/friendsPanel';
 @use '../sass/components/sideNav';
+@use '../sass/components/mobileNav';
 @use '../sass/components/header';
 @use '../sass/components/line';
 @use '../sass/components/profilePicture';
