Notifications system - basic

--- a/resources/sass/abstracts/_size.scss
+++ b/resources/sass/abstracts/_size.scss
@@ -2,6 +2,7 @@ $base-size: 1rem;
 
 $sizes: (
     '100':$base-size * 0.125, 
+    '150':$base-size * 0.2, 
     '200':$base-size * 0.25, 
     '300':$base-size * 0.5,
     '400':$base-size * 0.75,
