--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -11,11 +11,13 @@
 
 @use '../sass/components/groupsPanel';
 @use '../sass/components/friendsPanel';
+@use '../sass/components/notification';
 @use '../sass/components/sideNav';
 @use '../sass/components/mobileNav';
 @use '../sass/components/header';
 @use '../sass/components/line';
 @use '../sass/components/profilePicture';
+@use '../sass/components/scrollbar';
 
 @use '../sass/pages/home';
 
