--- a/resources/sass/components/_notification.scss
+++ b/resources/sass/components/_notification.scss
@@ -85,6 +85,9 @@
     display: flex;
     
     align-items: center;
+
+    width: fit-content;
+    height: 3.5rem;
     
     gap: var(--size-500);
 
