--- a/resources/sass/components/_panel.scss
+++ b/resources/sass/components/_panel.scss
@@ -1,4 +1,4 @@
-.groups-panel {
+.panel {
 
     display: flex;
     flex-direction: column;
@@ -14,24 +14,13 @@
     -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
     box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
 
-    @media only screen and (max-width: 80em) {
-        
-        width: fit-content;
-        padding: var(--size-400);
+    .list {
 
-    }
-
-    .panel-heading {
-
-        @media only screen and (max-width: 80em) {
-            display: none;
+        li:not(:last-child) {
+            margin-bottom: var(--size-500);
         }
 
-    }
-
-    .groups-list {
-
-        .group {
+        .item {
 
             display: flex;
             align-items: center;
@@ -42,13 +31,9 @@
     
             text-decoration: none;
 
-            .group-name {
+            .item-name {
 
                 color: var(--clr-neutral-500);
-
-                @media only screen and (max-width: 80em) {
-                    display: none;
-                }
 
             }
 
@@ -57,14 +42,13 @@
             &:hover, &:focus-within {
                 background: var(--clr-neutral-200);
             }
-
         }
 
     }
 
 }
 
-.no-groups {
+.no-items {
     display: flex;
     flex-direction: column;
 
