Group Conversations Panel

--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -50,3 +50,7 @@ $font-weights: (
 body {
     font-family: #{$ff-primary} !important;
 }
+
+button {
+    font-family: #{$ff-primary} !important;
+}
