--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -11,6 +11,7 @@
 
 
 @use '../sass/components/panel';
+@use '../sass/components/groupConversationPanel';
 @use '../sass/components/notification';
 @use '../sass/components/sideNav';
 @use '../sass/components/mobileNav';
