Showing recent searches in search bar

--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -365,4 +365,8 @@
     -webkit-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
     -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
     box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+
+    .recent {
+        list-style-type: square;
+    }
 }
