--- a/resources/sass/components/_searchBox.scss
+++ b/resources/sass/components/_searchBox.scss
@@ -6,6 +6,7 @@
 
     background: var(--clr-neutral-100);
 
+    width: 100%;
     padding: var(--size-500);
     border-radius: var(--size-500);
     gap: var(--size-500);
@@ -13,4 +14,5 @@
     -webkit-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
     -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
     box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
+
 }
