--- a/resources/sass/components/_searchBox.scss
+++ b/resources/sass/components/_searchBox.scss
@@ -15,4 +15,22 @@
     -moz-box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
     box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
 
+    .search-list {
+
+        li:not(:last-child) {
+
+            margin-bottom: var(--size-300);
+
+        }
+
+    }
+
+    .item {
+        display: flex;
+        align-items: center;
+
+
+        text-decoration: none;
+    }
+
 }
