--- a/resources/sass/components/_searchBox.scss
+++ b/resources/sass/components/_searchBox.scss
@@ -29,8 +29,19 @@
         display: flex;
         align-items: center;
 
-
         text-decoration: none;
+
+        gap: var(--size-500);
+        padding: var(--size-200);
+        border-radius: var(--size-500);
+
+        .profile-picture {
+            --width: var(--size-750)
+        }
+
+        &:hover, &:focus {
+            background: var(--clr-neutral-200);
+        }
     }
 
 }
