Inviting friends in search bar

--- a/resources/sass/components/_searchBox.scss
+++ b/resources/sass/components/_searchBox.scss
@@ -29,6 +29,8 @@
         display: flex;
         align-items: center;
 
+        cursor: pointer;
+
         text-decoration: none;
 
         gap: var(--size-500);
