--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -367,6 +367,43 @@
     box-shadow: 0px 8px 20px -10px var(--clr-other-box-shadow);
 
     .recent {
-        list-style-type: square;
+        list-style-type: none;
+
+        li:not(:last-child) {
+            margin-bottom: var(--size-200);
+        }
+
+        .item {
+
+            cursor: pointer;
+
+            display: flex;
+            align-items: center;
+    
+            width: 100%;
+            gap: var(--size-500);
+            padding: var(--size-300);
+            border-radius: var(--size-500);
+    
+            background: none;
+            border: none;
+            
+            .profile-picture {
+                --width: var(--size-750);
+            }
+
+            .item-name {
+
+                color: var(--clr-neutral-500);
+
+            }
+
+            transition: 0.2s;
+
+            &:hover, &:focus-within {
+                background: var(--clr-neutral-200);
+            }
+        }
+
     }
 }
