--- a/resources/sass/abstracts/_size.scss
+++ b/resources/sass/abstracts/_size.scss
@@ -7,6 +7,7 @@ $sizes: (
     '300':$base-size * 0.5,
     '400':$base-size * 0.75,
     '500':$base-size * 1,
+    '550':$base-size * 1.25,
     '600':$base-size * 1.5,
     '700':$base-size * 1.75,
     '750':$base-size * 2,
