--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -13,6 +13,7 @@ $font-sizes: (
     '400' : $base-size * 0.825,
     '500' : $base-size * 1,
     '700' : $base-size * 1.25,
+    '800' : $base-size * 1.5,
 );
 
 $font-weights: (
