--- a/resources/sass/abstracts/_colors.scss
+++ b/resources/sass/abstracts/_colors.scss
@@ -19,7 +19,8 @@ $colors: (
 
     'other': (
         'box-shadow': hsla(216, 20%, 15%, 0.15),
-        'active': hsl(123, 85%, 50%)
+        'active': hsl(123, 85%, 50%),
+        'error': hsl(0, 73%, 66%)
     )
 );
 
