Added loader to login button

--- a/resources/sass/components/_button.scss
+++ b/resources/sass/components/_button.scss
@@ -1,4 +1,9 @@
 .btn {
+
+    .loader-dots {
+        --loader-color: var(--clr-neutral-100); 
+    }
+
     height: var(--size-800);
 
     display: flex;
