--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -14,6 +14,7 @@
 @use '../sass/components/link';
 @use '../sass/components/input';
 @use '../sass/components/panel';
+@use '../sass/components/loader';
 @use '../sass/components/searchBox';
 @use '../sass/components/groupConversationPanel';
 @use '../sass/components/notification';
