--- a/resources/sass/components/_loader.scss
+++ b/resources/sass/components/_loader.scss
@@ -1,3 +1,148 @@
 .loader-dots {
-    
+
+    position: relative;
+
+    display: inline-block;
+
+    content: "";
+
+    --loader-color: var(--clr-neutral-500);
+
+    width: var(--size-400);
+    height: var(--size-400);
+
+    margin-left: var(--size-500);
+    margin-right: var(--size-500);
+
+    background: var(--loader-color);
+
+    border-radius: var(--size-500);
+
+    animation: loading-dots 1.5s infinite;
+
+    &::after {
+
+        position: absolute;
+
+        top: 0;
+        right: calc(var(--size-500) * -1);
+
+        display: inline-block;
+
+        content: "";
+
+        width: var(--size-400);
+        height: var(--size-400);
+
+        background: var(--loader-color);
+        border: 1px solid var(--loader-color);
+
+        border-radius: var(--size-500);
+
+        animation: loading-dots-after 1.5s infinite;
+    }
+
+    &::before {
+
+        position: absolute;
+
+        top: 0;
+        left: calc(var(--size-500) * -1);
+
+        display: inline-block;
+
+        content: "";
+
+        width: var(--size-400);
+        height: var(--size-400);
+
+        background: var(--loader-color);
+        border: 1px solid var(--loader-color);
+
+        border-radius: var(--size-500);
+
+        animation: loading-dots-before 1.5s infinite;
+
+    }
+
+}
+
+@keyframes loading-dots-before {
+    16% {
+        transform: translateY(5px);
+    }
+
+    32% {
+        transform: translateY(-5px);
+    }
+
+    48% {
+        transform: translateY(-5px);
+    }
+
+    64% {
+        transform: translateY(5px);
+    }
+
+    80% {
+        transform: translateY(0px);
+    }
+
+    96% {
+        transform: translateY(0px);
+    }
+
+}
+
+@keyframes loading-dots {
+
+    16% {
+        transform: translateY(0px);
+    }
+
+    32% {
+        transform: translateY(0px);
+    }
+
+    48% {
+        transform: translateY(5px);
+    }
+
+    64% {
+        transform: translateY(-5px);
+    }
+
+    80% {
+        transform: translateY(0px);
+    }
+
+    96% {
+        transform: translateY(0px);
+    }
+}
+
+@keyframes loading-dots-after {
+    16% {
+        transform: translateY(0px);
+    }
+
+    32% {
+        transform: translateY(0px);
+    }
+
+    48% {
+        transform: translateY(-5px);
+    }
+
+    64% {
+        transform: translateY(5px);
+    }
+
+    80% {
+        transform: translateY(5px);
+    }
+
+    96% {
+        transform: translateY(-5px);
+    }
 }
