Background shape and responsive login page

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -24,6 +24,7 @@
 @use '../sass/components/line';
 @use '../sass/components/profilePicture';
 @use '../sass/components/scrollbar';
+@use '../sass/components/bodyShapes';
 
 @use '../sass/pages/home';
 @use '../sass/pages/login';
