--- a/resources/sass/layouts/_flex.scss
+++ b/resources/sass/layouts/_flex.scss
@@ -1,9 +1,14 @@
 .flex {
-    --gap-size: var(--size-500);
     display: flex;
     align-items: center;
 
-    gap: var(--gap-size);
+    width: 100%;
+
+    gap: auto;
+}
+
+.flex-column {
+    flex-direction: column;
 }
 
 .space-between {
