--- a/resources/sass/pages/_register.scss
+++ b/resources/sass/pages/_register.scss
@@ -1,4 +1,5 @@
-.login-page {
+.register-page {
+
     height: 90vh;
 
     display: flex;
@@ -11,7 +12,7 @@
     width: min(25rem, 100%);
 }
 
-.login-content {
+.register-content {
     display: flex;
 
     margin: var(--size-600);
@@ -47,7 +48,7 @@
     }
 }
 
-.login {
+.register {
     background: var(--clr-neutral-100);
 
     display: flex;
@@ -64,7 +65,7 @@
 
 }
 
-.login-form {
+.register-form {
 
     display: flex;
     flex-direction: column;
