--- a/resources/sass/pages/_register.scss
+++ b/resources/sass/pages/_register.scss
@@ -1,6 +1,11 @@
-.register-page {
+body:has(.register-page) {
+    display: flex;
 
-    height: 90vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.register-page {
 
     display: flex;
     
