--- a/resources/sass/abstracts/_size.scss
+++ b/resources/sass/abstracts/_size.scss
@@ -6,6 +6,7 @@ $sizes: (
     '200':$base-size * 0.25, 
     '300':$base-size * 0.5,
     '400':$base-size * 0.75,
+    '450':$base-size * 0.875,
     '500':$base-size * 1,
     '550':$base-size * 1.25,
     '600':$base-size * 1.5,
