--- a/resources/sass/layouts/_menu.scss
+++ b/resources/sass/layouts/_menu.scss
@@ -1,4 +1,7 @@
 .menu {
+
+    z-index: 5;
+
     @media screen and (max-width: 30em) {
         position: absolute;
         inset-inline: var(--size-300);
