Profile controller, date in register controller

--- a/resources/sass/components/_input.scss
+++ b/resources/sass/components/_input.scss
@@ -192,6 +192,7 @@
             overflow-y: auto;
 
             .dropdown-item {
+                cursor: pointer;
 
                 padding-inline: var(--size-300);
                 padding-block: var(--size-200);
