--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -14,6 +14,7 @@ $font-sizes: (
     '500' : $base-size * 1,
     '700' : $base-size * 1.25,
     '800' : $base-size * 1.5,
+    '900' : $base-size * 2
 );
 
 $font-weights: (
